making button width 100% for noframe layout

--- a/src/assets/scss/components/button.scss
+++ b/src/assets/scss/components/button.scss
@@ -201,6 +201,11 @@ button, .button, [type="button"], [type="reset"], [type="submit"] {
 	}
 }
 
+.page-noframe #mainContent {
+	button {
+		width: 100%;
+	}
+}
 
 @include breakpoint(medium) {
 	button, .button, [type="button"], [type="reset"], [type="submit"] {
