--- a/src/assets/scss/components/nav.scss
+++ b/src/assets/scss/components/nav.scss
@@ -181,6 +181,11 @@
 
 .subLinks {
   @include noBulletsList;
+  @include position(absolute,$top:55px,$zIndex:3);
+  background: $white;
+  height: 300px;
+  overflow-y: scroll;
+  width: 100%;
 
   li {
     margin: 0 0 0.2rem;
@@ -197,6 +202,30 @@
     &.selected,&.selected:hover {
       color: $white;
       background-color: $complementary-dark-color1;
+    }
+  }
+}
+
+.subLinksDropDown {
+
+  background-color: $complementary-dark-color1;
+  background-image: url(../img/icon-light-down.png);
+  background-position: right center;
+  background-repeat: no-repeat;
+  color: $white;
+  cursor: pointer;
+  display: block;
+  padding: $global-padding;
+}
+
+@include breakpoint(medium) {
+  .subLinks {
+    @include position(relative,$top:0,$zIndex:1);
+    background: none;
+    height: auto;
+    overflow-y: auto;
+
+    a.selected, a.selected:hover {
       background-image: url(../img/icon-light-right.png);
       background-position: right center;
       background-repeat: no-repeat;
