added form js in partial

--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -21,3 +21,7 @@
 {{#ifpage 'changeMyPwd'}}
   <script src="{{root}}assets/js/single-page/profile.js"></script>
 {{/ifpage}}
+
+{{#ifpage 'InitialAssesmentForm'}}
+<script src="{{root}}assets/js/single-page/initial-assesment-form.js"></script>
+{{/ifpage}}
