--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -1,11 +1,15 @@
 form,.form, .formTextContainer {
   max-width: 800px;
 
-
-  footer {
-    margin: $global-margin*0.5 0;
-    button.button {
-      margin-bottom: 0;
+  .breadcrumbs {
+    display: flex;
+    justify-content: space-between;
+    ul {
+      margin: 0;
+      padding: :0;
+    }
+    li {
+      list-style: none;
     }
   }
 
@@ -108,6 +112,11 @@ form,.form, .formTextContainer {
   			background: rgba(0,0,0,0.2);
   		}
   	}
+  }
+
+  .buttonsGroup {
+    display: flex;
+    justify-content: space-between;
   }
 .scoreForm {
   .scoreRow {
