--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -4,10 +4,10 @@ form,.form, .formTextContainer {
   .breadcrumbs {
     display: flex;
     justify-content: space-between;
-    ul {
-      margin: 0;
-      padding: 0;
-    }
+
+    margin: 0;
+    padding: 0;
+
     li {
       list-style: none;
     }
@@ -66,6 +66,13 @@ form,.form, .formTextContainer {
     border-bottom: 0.2rem solid $light-gray;
     box-shadow: none;
     border-radius: 0;
+  }
+
+  input[disabled],
+  textarea[disabled] {
+    background: #ddd;
+    color: #999;
+
   }
 
   .checkboxGroup,
