--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -6,7 +6,7 @@ form,.form, .formTextContainer {
     justify-content: space-between;
     ul {
       margin: 0;
-      padding: :0;
+      padding:0;
     }
     li {
       list-style: none;
