--- a/src/layouts/columns-3.html
+++ b/src/layouts/columns-3.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-      {{> title}}
+      {{> meta-title}}
     </title>
     {{> header-settings}}
   </head>
@@ -18,7 +18,11 @@
       <div id="mainContent" class="">
         {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is
           created. --}}
+        {{> title}}
+        {{> profile}}
+        {{> aside1 }}
         {{> body}}
+        {{> aside2 }}
       </div> <!-- content end -->
       {{> footer}}
     </div>
