--- a/src/layouts/dashboard.html
+++ b/src/layouts/dashboard.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-      {{> title}}
+      {{> meta-title}}
     </title>
     {{> header-settings}}
   </head>
@@ -18,6 +18,7 @@
       <div id="mainContent" class="">
         {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is
           created. --}}
+          {{> title}}
         {{> body}}
       </div> <!-- content end -->
       {{> footer}}
