add iframe html into layout pages. add loadpage script for iframe.

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -21,6 +21,7 @@
           {{> title}}
           {{> body}}
       </div> <!-- content end -->
+      <iframe id="mainContentIframe" />
       {{> footer}}
     </div>
     {{> scripts}}
