--- a/src/layouts/columns-2.html
+++ b/src/layouts/columns-2.html
@@ -23,6 +23,7 @@
         {{> body}}
         {{> aside2}}
       </div> <!-- content end -->
+      <iframe id="mainContentIframe" />
       {{> footer}}
     </div>
     {{> scripts}}
