--- a/src/layouts/columns-3.html
+++ b/src/layouts/columns-3.html
@@ -24,6 +24,7 @@
         {{> body}}
         {{> aside2 }}
       </div> <!-- content end -->
+      <iframe id="mainContentIframe" />
       {{> footer}}
     </div>
     {{> scripts}}
