--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -14,7 +14,7 @@
 <script src="{{root}}assets/js/single-page/profile.js"></script>
 {{/ifpage}} {{#ifpage 'changeMyPwd'}}
 <script src="{{root}}assets/js/single-page/profile.js"></script>
-{{/ifpage}} {{#ifpage 'InitialAssesmentForm'}}
+{{/ifpage}} {{#ifpage 'initial-assesment-form'}}
 <script src="{{root}}assets/js/single-page/initial-assesment-form.js"></script>
 {{/ifpage}} {{#ifpage 'means-testdeclarationform'}}
 <script src="{{root}}assets/js/single-page/means-testdeclarationform.js"></script>
