--- a/src/layouts/columns-2.html
+++ b/src/layouts/columns-2.html
@@ -21,7 +21,7 @@
           created. --}}
         {{> title}}
         {{> body}}
-        {{> aside2}}
+        {{> sidebar2}}
       </div> <!-- content end -->
       {{> footer}}
     </div>
