--- a/src/layouts/columns-3.html
+++ b/src/layouts/columns-3.html
@@ -20,9 +20,9 @@
           created. --}}
         {{> title}}
         {{> profile}}
-        {{> aside1 }}
+        {{> sidebar1 }}
         {{> body}}
-        {{> aside2 }}
+        {{> sidebar2 }}
       </div> <!-- content end -->
       {{> footer}}
     </div>
