--- a/src/assets/scss/components/main.scss
+++ b/src/assets/scss/components/main.scss
@@ -1,5 +1,9 @@
+body {
+
+}
 #main {
 	background: $light-gray url(../img/cubes.png) repeat center center;
+
 	//@include position(relative);
   //height: 100%;
 }
@@ -9,17 +13,18 @@
 	padding: $global-padding $global-edge-padding;
 	//padding-top: 8rem;
 
-	h1 {
+	#pageTitle,
+	header.titleMain,
+	#pageProfile {
+		display: flex;
+		align-items: flex-end;
+		margin-bottom: 0;
+
 		small {
 			color:$black;
 		}
 	}
 
-  header.titleMain {
-    border-bottom: none;
-    margin-bottom: 1.5rem;
-
-  }
 
 	section {
 		//margin-bottom: 2rem;
