--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -13,14 +13,18 @@
     {{> header-settings}}
   </head>
   <body id="page-{{page}}">
-    <div id="main" class="">
+    <div id="main">
       {{> header}}
-      <div id="mainContent" class="">
-        {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is
-          created. --}}
-          {{> title}}
-          {{> body}}
-      </div> <!-- content end -->
+      {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
+      <div id="mainContent">
+        {{> title}}
+        {{> profile}}
+        {{> sidebar1 }}
+        <div id="pageContent">{{> body}}</div>
+
+        {{> sidebar2 }}
+      </div>
+       <!-- content end -->
       {{> footer}}
     </div>
     {{> scripts}}
