--- a/src/assets/scss/components/mixins.scss
+++ b/src/assets/scss/components/mixins.scss
@@ -215,11 +215,16 @@
   input[type='checkbox'],
   input[type=text] {
     line-height: 1.2;
-    margin: 0 0.5rem 0.5rem 0.5rem;
+    margin: 0 0.5rem 0.5rem 0;
 
-    &:first-child {
-      margin-left : 0;
+    @include breakpoint(medium) {
+      margin-left: 0.5rem;
+
+      &:first-child {
+        margin-left : 0;
+      }
     }
+
   }
 
 
