update date group styles

--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -78,12 +78,12 @@ form,.form, .formTextContainer {
   .dateGroup {
     @include formGroups();
 
-    input[placeholder=DD],
-    input[placeholder=MM] {
+    input[data-date-group=DD],
+    input[data-date-group=MM] {
       text-align: center;
       width: 60px;
     }
-    input[placeholder=YYYY] {
+    input[data-date-group=YYYY] {
       text-align: center;
       width: 100px;
     }
@@ -118,7 +118,7 @@ form,.form, .formTextContainer {
 
   .buttonsGroup {
     display: flex;
-    
+
     justify-content: space-between;
   }
 .scoreForm {
