--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -23,6 +23,7 @@
         <div id="pageContent">{{> body}}</div>
 
         {{> sidebar2 }}
+        <iframe id="pageIFrame" ></iframe>
       </div>
        <!-- content end -->
       {{> footer}}
