--- a/src/assets/scss/components/main.scss
+++ b/src/assets/scss/components/main.scss
@@ -10,6 +10,9 @@ body {
 
 #mainContent {
 	background: $white;
+	min-height: 400px;
+	overflow-y: auto;
+	overflow-x: hidden;
 	padding: $global-padding $global-edge-padding;
 	//padding-top: 8rem;
 
@@ -25,15 +28,15 @@ body {
 		}
 	}
 
+	#pageIFrame {
+		border: none;
+		min-height: 800px;
+		height: 100%;
+		width: 100%;
+	}
 
 	section {
 		//margin-bottom: 2rem;
-	}
-}
-
-.contentContainer {
-  & > header {
-
 	}
 }
 
