added some page data in reference page

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -12,7 +12,7 @@
     </title>
     {{> header-settings}}
   </head>
-  <body id="page-{{page}}">
+  <body id="page-{{page}}" class="">
     <div id="main">
       {{> header}}
       {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
