updated to latest

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,13 @@
 <header id="header">
   <div class="topBar">
-    <a href="{{root}}index.html" id="logo">Genesis</a>
+    <a href="{{root}}Ticketing/TicketingHome.html" id="logo">BIZCUBE TICKETING</a>
     <ul id="navSecondary" >
       <li>
-        <a href="#" id="navSearch" title="Search"><i class="icon"><img src="{{root}}assets/img/icon-light-search.png" /></i> <span class="text">Search</span></a></li>
-
+        <a href="{{root}}Ticketing/TicketingHome.html" id="navHome" title="Home"><i class="icon"><img src="{{root}}assets/img/icon-light-home.png" /></i> <span class="text">Home</span></a></li>
       <li>
-        <a href="{{root}}" id="navHome" title="Home"><i class="icon"><img src="{{root}}assets/img/icon-light-home.png" /></i> <span class="text">Home</span></a></li>
+        <a href="{{root}}/Ticketing/profile.html" id="navProfile" title="Profile"><i class="icon"><img src="{{root}}assets/img/icon-light-profile.png" /></i> <span class="text">Profile</span></a></li>
       <li>
-        <a href="{{root}}/iContacts/profile.html" id="navProfile" title="Profile"><i class="icon"><img src="{{root}}assets/img/icon-light-profile.png" /></i> <span class="text">Profile</span></a></li>
-      <li>
-        <a href="#" id="navLogout"><i class="icon"><img src="{{root}}assets/img/icon-light-log-out.png" /></i> <span class="text">Logout</span></a>
+        <a href="#" id="logOut"><i class="icon"><img src="{{root}}assets/img/icon-light-log-out.png" /></i> <span class="text">Logout</span></a>
       </li>
       <li>
         <a href="#" id="navMainMenu" class="menu-icon"><span class="text">Main Menu</span></a>
@@ -25,71 +22,14 @@
     </header>
     <nav id="mainMenu">
       <ul class="module">
-        <li><a href="{{root}}/contacts/" data-menu="contacts" >Contacts</a></li>
-        <li><a href="{{root}}/communications/" data-menu="communications" >Communications</a></li>
-        <li><a href="{{root}}/volunteers/" data-menu="volunteers" >Volunteers</a></li>
-        <li><a href="{{root}}/donations/" data-menu="donations" >Donations</a></li>
-        <li><a href="{{root}}/file-manager/" data-menu="fileManager" >File Manager</a></li>
-        <li><a href="{{root}}/reports/" data-menu="reports" >Reports</a></li>
-        <li><a href="{{root}}/imports/" data-menu="imports" >Imports</a></li>
-        <li><a href="{{root}}/settings/" data-menu="settings" >Settings</a></li>
+        <li><a href="{{root}}/ticketing/" data-menu="ticketing" >Ticketing</a></li>
       </ul>
-      <ul id="moduleMenu-contacts" class="moduleMenu" data-redirect="false">
-        <li><a href="{{root}}/contacts/">Search</a></li>
-        <li><a href="{{root}}/contacts/">Group Management</a></li>
-      </ul>
-      <ul id="moduleMenu-communications" class="moduleMenu" >
-        <li><a href="{{root}}/communications/">Schedule Email</a></li>
-      </ul>
-      <ul id="moduleMenu-volunteers" class="moduleMenu">
-        <li><a href="{{root}}/volunteers/life-cycle">Life Cycle</a></li>
-        <li><a href="{{root}}/volunteers/achievement">Achievement</a></li>
-        <li><a href="{{root}}/volunteers/attendance">Attendence</a></li>
-        <li><a href="{{root}}/volunteers/door-knocking">Door Knocking</a></li>
-      </ul>
-      <ul id="moduleMenu-donations" class="moduleMenu">
-        <li><a href="{{root}}/donations/batch.html">Batch Donations</a></li>
-        <li><a href="{{root}}/donations/convert-tax-receipts">Convert Tax Receipts</a></li>
-      </ul>
-      <ul id="moduleMenu-fileManager" class="moduleMenu">
-        <li><a href="{{root}}/file-manager/upload">Upload</a></li>
-        <li><a href="{{root}}/file-manager/management/">Files Management</a></li>
-      </ul>
-      <ul id="moduleMenu-reports" class="moduleMenu">
-        <li><a href="{{root}}/reports/">Reports</a></li>
-      </ul>
-      <ul id="moduleMenu-imports" class="moduleMenu">
-        <li><a href="{{root}}/imports/">Imports</a></li>
-      </ul>
-      <ul id="moduleMenu-settings" class="moduleMenu">
-        <li><a href="{{root}}/settings/lookup">Lookup</a></li>
-        <li><a href="{{root}}/settings/menu">Menu</a></li>
-        <li><a href="{{root}}/settings/slickgrid">Slickgrid</a></li>
-        <li><a href="{{root}}/settings/webparts">Web Parts</a></li>
+      <ul id="moduleMenu-ticketing" class="moduleMenu" data-redirect="false">
+        <li><a href="{{root}}/Ticketing/TicketingHome.html">Home</a></li>
+        <li class="packageMenu"><a href="{{root}}/Ticketing/packages.html">Packages</a></li>
       </ul>
     </nav><!-- main menu -->
-    <footer>GENESIS</footer>
+    <footer>BIZCUBE TICKETING</footer>
   </div><!-- mainMenuContainer end -->
-  <form id="searchForm" action="" method="GET" >
-    <input type="text" id="searchField" name="searchField" class="noBox" placeholder="Search">
-
-    <button id="searchFilterBtn" data-target="searchFilterBox" class="modalButton"><i class="icon"><img src="{{root}}/assets/img/icon-light-filter.png"></i></button>
-    <button id="searchBtn" type="submit"><i class="icon"><img src="{{root}}/assets/img/icon-light-search.png"></i><span class="text ">Filter</span></button>
-
-    <div class="reveal form modalContent"  id="searchFilterBox">
-      <button class="close-button" data-close aria-label="Close modal" type="button">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      <div class="labelText">Category</div>
-      <div class="checkboxGroup">
-        <label for="searchCategoryContacts">
-        <input type="checkbox" id="searchCategoryContacts" name="searchCategory" value=contacts"">Contacts</label>
-        <label for="searchCategoryVolunteer">
-        <input type="checkbox" id="searchCategoryVolunteer" name="searchVolunteer" value=contacts"">Volunteer</label>
-        <label for="searchCategoryDonation">
-        <input type="checkbox" id="searchCategoryDonation" name="searchDonation" value=donation"">Donation</label>
-      </div>
-    </div>
-  </form><!-- searchForm end -->
 </header>
 <!-- header end -->
