--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,6 +19,8 @@
   </div><!-- topBar-->
   <div id="mainMenuContainer">
     <header>
+      <button class="back-button" aria-label="Back" type="button">
+      </button>
       <button class="close-button" aria-label="Close menu" type="button" data-close>
         <span aria-hidden="true">&times;</span>
       </button>
