added first menu selected feature when toggle menuContainer

--- a/src/assets/scss/components/nav.scss
+++ b/src/assets/scss/components/nav.scss
@@ -70,6 +70,9 @@
     a {
       background: $complementary-dark-color2 url(../img/icon-mid-chevron-right.png) no-repeat center right;
 
+      &.selected {
+        background: $complementary-dark-color3 url(../img/icon-mid-chevron-right.png) no-repeat center right;
+      }
       &:hover {
         @include activeDropDown;
         background: $complementary-dark-color3 url(../img/icon-mid-chevron-right.png) no-repeat center right;
