--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -21,6 +21,6 @@
 {{/ifpage}} {{#ifpage 'means-testdeclarationform'}}
 <script src="{{root}}assets/js/single-page/means-testdeclarationform.js"></script>
 {{/ifpage}}
-{{/ifpage}} {{#ifpage 'AppealforExtendedSubsidies'}}
+ {{#ifpage 'AppealforExtendedSubsidies'}}
 <script src="{{root}}assets/js/single-page/AppealforExtendedSubsidies.js"></script>
 {{/ifpage}}
