--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -24,3 +24,12 @@
  {{#ifpage 'AppealforExtendedSubsidies'}}
 <script src="{{root}}assets/js/single-page/AppealforExtendedSubsidies.js"></script>
 {{/ifpage}}
+{{#ifpage 'AppealforExtendedSubsidies'}}
+<script src="{{root}}assets/js/single-page/AppealforExtendedSubsidies.js"></script>
+{{/ifpage}}
+{{#ifpage 'AssistiveDeviceEquipmentSubsidy_ApplnForm'}}
+<script src="{{root}}assets/js/single-page/AssistiveDeviceEquipmentSubsidy_ApplnForm.js"></script>
+{{/ifpage}}
+{{#ifpage 'musculardystrophyassociation'}}
+<script src="{{root}}assets/js/single-page/musculardystrophyassociation.js"></script>
+{{/ifpage}}
