add a method to load script for each individual page.

--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -21,3 +21,5 @@
 {{/ifpage}} {{#ifpage 'means-testdeclarationform'}}
 <script src="{{root}}assets/js/single-page/means-testdeclarationform.js"></script>
 {{/ifpage}}
+
+<div id="scriptContainer"></div>
