--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -24,9 +24,9 @@
  {{#ifpage 'AppealforExtendedSubsidies'}}
 <script src="{{root}}assets/js/single-page/AppealforExtendedSubsidies.js"></script>
 {{/ifpage}}
-{{#ifpage 'AppealforExtendedSubsidies'}}
+<!-- {{#ifpage 'AppealforExtendedSubsidies'}}
 <script src="{{root}}assets/js/single-page/AppealforExtendedSubsidies.js"></script>
-{{/ifpage}}
+{{/ifpage}} -->
 {{#ifpage 'AssistiveDeviceEquipmentSubsidy_ApplnForm'}}
 <script src="{{root}}assets/js/single-page/AssistiveDeviceEquipmentSubsidy_ApplnForm.js"></script>
 {{/ifpage}}
