adding slick grid components

--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -1,4 +1,12 @@
 <script src="{{root}}assets/js/app.js"></script>
+<!--<script
+  src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
+  integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
+  crossorigin="anonymous"></script>-->
+<script src="{{root}}assets/js/bizcube2/master.js"></script>
+<script src="{{root}}assets/js/bizcube2/jquery.event.drag-2.0.min.js"></script>
+<script src="{{root}}assets/js/bizcube2/slick.bcdefault.js"></script>
+<script src="{{root}}assets/js/bizcube2/slick.grid.helper.js"></script>
 
 
 {{#ifpage 'TicketingHome'}}
