--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -79,6 +79,6 @@
 
 @import 'components/slick-grid';
 @import 'components/slick-default-theme';
-@import 'components/main_new';
+//@import 'components/main_new';
 
 @import 'components/login';
