form row styles updated

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -78,7 +78,8 @@
 @import 'components/breadcrumbs';
 
 @import 'components/slick-grid';
-@import 'components/slick-default-theme';
-@import 'components/main_new';
+//@import 'components/slick-default-theme';
+//@import 'components/main_new';
+@import 'components/slick-grid-bizcube';
 
 @import 'components/login';
