--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -171,15 +171,23 @@ form,.form, .formTextContainer {
   }
 
   &.formRows {
+    max-width: none;
+
     .row {
       display: flex;
       justify-content: flex-start;
-      margin: 0 0 1rem;
+      margin: 0 0 0.5rem;
 
-      div {
+
+      div, a {
         margin: 0 1rem 0 0;
-        min-width: 150px;
       }
+      div {
+          min-width: 150px;
+      }
+    }
+    button,.button {
+      margin: 0 0 1rem;
     }
   }
 
