Add EmailRetireval page

--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -27,3 +27,6 @@
 {{#ifpage 'InitialAssesmentForm'}}
 <script src="{{root}}assets/js/single-page/initial-assesment-form.js"></script>
 {{/ifpage}}
+{{#ifpage 'EmailRetrieval'}}
+  <script src="{{root}}assets/js/single-page/EmailRetrieval.js"></script>
+{{/ifpage}}
