--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -22,8 +22,9 @@
 {{#ifpage 'changeMyPwd'}}
   <script src="{{root}}assets/js/single-page/profile.js"></script>
 {{/ifpage}}
-
-
+{{#ifpage 'EmailRetrieval'}}
+  <script src="{{root}}assets/js/single-page/EmailRetrieval.js"></script>
+{{/ifpage}}
 {{#ifpage 'InitialAssesmentForm'}}
 <script src="{{root}}assets/js/single-page/initial-assesment-form.js"></script>
 {{/ifpage}}
