Add password modify page

--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -28,3 +28,6 @@
 {{#ifpage 'InitialAssesmentForm'}}
 <script src="{{root}}assets/js/single-page/initial-assesment-form.js"></script>
 {{/ifpage}}
+{{#ifpage 'PwdRetrieval'}}
+  <script src="{{root}}assets/js/single-page/PwdRetrieval.js"></script>
+{{/ifpage}}
