add css box-sizing and line-height for grid cells.

--- a/src/assets/scss/components/main.scss
+++ b/src/assets/scss/components/main.scss
@@ -110,6 +110,10 @@ ul.noBullets {
 	}
 }
 
+.GridDimensions {
+	box-sizing: content-box;
+	line-height: 1.2em;
+}
 
 @include breakpoint(medium) {
   #mainContent {
