commented out the sort button style.

--- a/src/assets/scss/components/slick-grid-bizcube.scss
+++ b/src/assets/scss/components/slick-grid-bizcube.scss
@@ -23,12 +23,14 @@ div.GridDimensions {
 		.slick-header-column {
 
 		}
+    /*
     .slick-header-menubutton {
       background-image: url("../../assets/img/down.gif") !important;
       display: block;
       width: 12px;
       height: 10px;
     }
+    */
 	}
 
 }
